# mingw-pkgspecs

./: .gitignore  Makefile.in  configure.ac
